# MCP-Multi-Server-Client

./: client.py  pyproject.toml  requirements.txt
chess_server/: chess_api.py  chessserver.py
crypto_server/: crypto.py
